[gd_scene load_steps=3 format=3 uid="uid://23upv5512x3o"]

[ext_resource type="Script" uid="uid://tykpehc84kds" path="res://Scripts/powerup_menu.gd" id="1_qog2b"]
[ext_resource type="Texture2D" uid="uid://cpkq5qa7qp07g" path="res://Assets/menu_background.png" id="2_70r4u"]

[node name="Menu" type="Control"]
process_mode = 3
z_index = 20
z_as_relative = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -844.8
offset_bottom = -426.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qog2b")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1000.0
offset_bottom = 540.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
z_index = 10
layout_mode = 2
theme_override_constants/separation = 200

[node name="Option1" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "opt1"
icon = ExtResource("2_70r4u")
flat = true
autowrap_mode = 2
icon_alignment = 1
expand_icon = true

[node name="Option2" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "opt2"
icon = ExtResource("2_70r4u")
flat = true
autowrap_mode = 2
icon_alignment = 1
expand_icon = true

[node name="Option3" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "opt3
"
icon = ExtResource("2_70r4u")
flat = true
autowrap_mode = 2
icon_alignment = 1
expand_icon = true

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
zoom = Vector2(2.685, 2.685)

[connection signal="pressed" from="MarginContainer/HBoxContainer/Option1" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Option1" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Option2" to="." method="_on_option_2_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Option2" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Option3" to="." method="_on_option_3_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Option3" to="." method="_on_quit_pressed"]
